chore: Add empty lines to multiple files for improved readability and consistency across the project; update CSS styles for buttons and sidebar.

--- a/app/templates/teacher/base_dashboard.html
+++ b/app/templates/teacher/base_dashboard.html
@@ -106,6 +106,10 @@
     box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
 }
 
+#sidebar {
+    color: rgba(78, 29, 29, 1);
+}
+
 .sidebar .nav-link {
     font-weight: 500;
     color: #333;
