--- a/app/templates/teacher/edit_student.html
+++ b/app/templates/teacher/edit_student.html
@@ -51,8 +51,8 @@
         <input type="number" class="form-control" name="max_health" value="{{ character.max_health }}">
       </div>
       <div class="col-md-2 mb-2">
-        <label class="form-label">Strength</label>
-        <input type="number" class="form-control" name="strength" value="{{ character.strength }}">
+        <label class="form-label">Power</label>
+        <input type="number" class="form-control" name="power" value="{{ character.power }}">
       </div>
       <div class="col-md-2 mb-2">
         <label class="form-label">Defense</label>
