--- a/app/templates/student/battle/results.html
+++ b/app/templates/student/battle/results.html
@@ -80,8 +80,8 @@
         <a href="{{ url_for('student_battle.arena') }}" class="btn btn-primary">
             <i class="bi bi-arrow-left-circle"></i> Back to Arena
         </a>
-        <a href="{{ url_for('student.dashboard') }}" class="btn btn-secondary">
-            <i class="bi bi-house"></i> Dashboard
+        <a href="{{ url_for('student.character') }}" class="btn btn-secondary">
+            <i class="bi bi-house"></i> Character
         </a>
     </div>
 </div>
